Fix styling in dark mode

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body.theme-dark {
   cursor: default;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -171,7 +172,7 @@ header {
 .day {
   display: grid;
   list-style-type: none;
-  width: 69px;  /* nice */
+  width: 69px; /* nice */
   height: 60px;
   padding: 1px 4px;
   font-weight: 400;
@@ -180,20 +181,46 @@ header {
   position: relative;
 }
 
-.day.row-1 { grid-row: 1; }
-.day.row-2 { grid-row: 2; }
-.day.row-3 { grid-row: 3; }
-.day.row-4 { grid-row: 4; }
-.day.row-5 { grid-row: 5; }
-.day.row-6 { grid-row: 6; }
+.day.row-1 {
+  grid-row: 1;
+}
+.day.row-2 {
+  grid-row: 2;
+}
+.day.row-3 {
+  grid-row: 3;
+}
+.day.row-4 {
+  grid-row: 4;
+}
+.day.row-5 {
+  grid-row: 5;
+}
+.day.row-6 {
+  grid-row: 6;
+}
 
-.day.col-1 { grid-column: 1; }
-.day.col-2 { grid-column: 2; }
-.day.col-3 { grid-column: 3; }
-.day.col-4 { grid-column: 4; }
-.day.col-5 { grid-column: 5; }
-.day.col-6 { grid-column: 6; }
-.day.col-7 { grid-column: 7; }
+.day.col-1 {
+  grid-column: 1;
+}
+.day.col-2 {
+  grid-column: 2;
+}
+.day.col-3 {
+  grid-column: 3;
+}
+.day.col-4 {
+  grid-column: 4;
+}
+.day.col-5 {
+  grid-column: 5;
+}
+.day.col-6 {
+  grid-column: 6;
+}
+.day.col-7 {
+  grid-column: 7;
+}
 
 .day:not(.col-1):not(.day-1) {
   border-left: none;
@@ -216,7 +243,7 @@ header {
 .girl-month-number {
   display: inline-block;
   position: absolute;
-  color: var(--day);
+  color: white;
   font-weight: bold;
   font-size: 1.3em;
   padding: 2px 8px;
@@ -263,6 +290,7 @@ header {
 
 .notice {
   background-color: yellow;
+  color: black;
   margin-top: 20px;
   font-weight: 300;
   font-size: 20px;
@@ -270,13 +298,15 @@ header {
   border-radius: 8px;
 }
 
-.note, .stream {
+.note,
+.stream {
   position: relative;
   cursor: pointer;
 }
 
-.note:after, .stream:after {
-  content: '';
+.note:after,
+.stream:after {
+  content: "";
   width: 0;
   height: 0;
   border-style: solid;
@@ -294,18 +324,18 @@ header {
   border-color: transparent var(--purple) transparent transparent;
 }
 
-.tippy-box[data-theme~='f1nn'] {
+.tippy-box[data-theme~="f1nn"] {
   font-weight: 300;
   font-size: 1.25em;
 }
 
-.tippy-box[data-theme~='f1nn'] a {
+.tippy-box[data-theme~="f1nn"] a {
   color: var(--yellow);
   cursor: pointer;
   text-decoration: none;
 }
 
-.tippy-box[data-theme~='f1nn'] a:hover {
+.tippy-box[data-theme~="f1nn"] a:hover {
   text-decoration: underline;
 }
 
@@ -317,42 +347,79 @@ header {
 }
 
 .girly-girl-month-complete {
-  background: repeating-linear-gradient(var(--stripe-angle),
-    var(--blue), var(--blue) 10px,
-    var(--blue-stripe) 10px, var(--blue-stripe) 20px);
+  background: repeating-linear-gradient(
+    var(--stripe-angle),
+    var(--blue),
+    var(--blue) 10px,
+    var(--blue-stripe) 10px,
+    var(--blue-stripe) 20px
+  );
 }
 .girly-girl-month-planned {
-  background: repeating-linear-gradient(var(--stripe-angle),
-    var(--blue-light), var(--blue-light) 10px,
-    var(--blue-light-stripe) 10px, var(--blue-light-stripe) 20px);
+  background: repeating-linear-gradient(
+    var(--stripe-angle),
+    var(--blue-light),
+    var(--blue-light) 10px,
+    var(--blue-light-stripe) 10px,
+    var(--blue-light-stripe) 20px
+  );
 }
-.girl-month-complete { background-color: var(--blue); }
-.girl-month-planned { background-color: var(--blue-light); }
-.guy-month-complete { background-color: var(--pink); }
-.guy-month-planned { background-color: var(--pink-light); }
-.break-complete { background-color: var(--red); }
-.break-planned { background-color: var(--red-light); }
-.bobs-complete { background-color: var(--green); }
-.bobs-planned { background-color: var(--green-light); }
+.girl-month-complete {
+  background-color: var(--blue);
+}
+.girl-month-planned {
+  background-color: var(--blue-light);
+}
+.guy-month-complete {
+  background-color: var(--pink);
+}
+.guy-month-planned {
+  background-color: var(--pink-light);
+}
+.break-complete {
+  background-color: var(--red);
+}
+.break-planned {
+  background-color: var(--red-light);
+}
+.bobs-complete {
+  background-color: var(--green);
+}
+.bobs-planned {
+  background-color: var(--green-light);
+}
 
 .legend-girl-month {
-  background: linear-gradient(to right bottom,
-    var(--blue) 50%, var(--blue-light) 50%);
+  background: linear-gradient(
+    to right bottom,
+    var(--blue) 50%,
+    var(--blue-light) 50%
+  );
 }
 .legend-guy-month {
-  background: linear-gradient(to right bottom,
-    var(--pink) 50%, var(--pink-light) 50%);
+  background: linear-gradient(
+    to right bottom,
+    var(--pink) 50%,
+    var(--pink-light) 50%
+  );
 }
 .legend-break {
-  background: linear-gradient(to right bottom,
-    var(--red) 50%, var(--red-light) 50%);
+  background: linear-gradient(
+    to right bottom,
+    var(--red) 50%,
+    var(--red-light) 50%
+  );
 }
 .legend-bobs {
-  background: linear-gradient(to right bottom,
-    var(--green) 50%, var(--green-light) 50%);
+  background: linear-gradient(
+    to right bottom,
+    var(--green) 50%,
+    var(--green-light) 50%
+  );
 }
 
-.legend-note, .legend-stream {
+.legend-note,
+.legend-stream {
   background: var(--day);
   border: 1px solid var(--text);
 }
